# tif_file_index_manager

./: pyproject.toml
notebooks/: format_finder_notebook.ipynb
notebooks/.ipynb_checkpoints/: HelloJupyter-checkpoint.ipynb  format_finder_notebook-checkpoint.ipynb
tif_file_index_manager/.ipynb_checkpoints/: tif_file_index_manager-checkpoint.py
