[tool.poetry]
name = "tif-file-index-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.11"
pandas = "^2.2.2"
jupyterlab = "^4.2.2"
geopandas = "^0.14.4"
rasterio = "^1.3.10"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
